# numberbases

./: Cargo.toml  bignum.lua  binary.json  config.json  factorial.json  negative.json  target.txt
src/: config.rs  consts.rs  converter.rs  main.rs
src/converter/: bignum.rs
