[package]
name = "numberbases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.9.5", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2.18" }
convert-base = "1.1.2"
